# YOLOX-C

./: CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  YoloX.cpp  YoloX.hpp  YoloXApp.cpp
models/: init.md
onnxruntime/: readme.md
scripts/: install_onnx_runtime.bash
src/: CMakeLists.txt  OrtSessionHandler.cpp
